# panorama_idf

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.local  DEPLOYMENT.md  Dockerfile.pipeline  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-git-commit.sh
.github/workflows/: dbt.yml
admin/: Dockerfile  entrypoint.sh  index.html  nginx.conf
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/docs/: overview.md
dbt/macros/: cast_filosofi_numeric.sql  filter_idf.sql  safe_divide.sql
dbt/models/marts/: _marts__exposures.yml  _marts__models.yml  mart_immo__accessibilite_commune.sql  mart_immo__evolution_prix.sql  mart_immo__ranking_tension.sql  mart_immo__synthese_zone.sql
dbt/models/staging/dvf/: _dvf__models.yml  _dvf__sources.yml  _dvf__unit_tests.yml  stg_dvf__mutations_idf.sql  (+1 more)
dbt/seeds/: zones_idf.csv
dbt/tests/: assert_delinquance_positive.sql  assert_loyer_m2_positif.sql  assert_part_25_39_entre_0_et_1.sql  assert_parts_age_coherentes.sql  assert_prix_m2_positif.sql  assert_ratio_achat_coherent.sql  assert_surface_mediane_coherente.sql
geojson/: Dockerfile  nginx.conf
landing/: Dockerfile  entrypoint.sh  index.html  nginx.conf
postgres-init/: 01-create-metabase-app.sql
scripts/: backup.sh  run_pipeline.sh  setup_metabase.py
src/france_aujourdhui/: __init__.py
src/france_aujourdhui/ingest/: cli.py  config.py  download.py  prepare.py
src/panorama_idf/: __init__.py
src/panorama_idf/ingest/: cli.py  config.py  download.py  prepare.py
(+11 files in other folders)
