[project]
name = "france-aujourdhui"
version = "0.1.0"
description = "Analyse de l'accessibilité immobilière en Île-de-France à partir d'open data publics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb>=1.9.0",
    "duckdb>=1.5",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
geo = [
    "geopandas>=1.0.0",
    "folium>=0.18.0",
]

[project.scripts]
ingest = "france_aujourdhui.ingest.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/france_aujourdhui"]
